--- a/All_Player_Stats.html
+++ b/All_Player_Stats.html
@@ -55,7 +55,7 @@
                 `<h2>${info.stars} Star ${info.accoalde} ${info.player}</h2>
                 <p>Team: ${info.team}</p>
                 <p>Average Score Per Game: ${info.ppg}</p>
-                <p>Average Goals Per Game: ${info.gpd}</p>
+                <p>Average Goals Per Game: ${info.gpg}</p>
                 <p>Average Assists Per Game: ${info.apg}</p>
                 <p>Average Saves Per Game: ${info.spg}</p>
                 <p>Games Played: ${info.games}</p>`;
