--- a/All_Player_Stats.html
+++ b/All_Player_Stats.html
@@ -52,7 +52,7 @@
         const info = players[selected];
         if (info) {
             document.getElementById('playerInfo').innerHTML =
-                `<h2>${info.stars} Star ${info.accoalde} ${info.player}</h2>
+                `<h2>${info.stars} Star ${info.accolade} ${info.player}</h2>
                 <p>Team: ${info.team}</p>
                 <p>Average Score Per Game: ${info.ppg}</p>
                 <p>Average Goals Per Game: ${info.gpg}</p>
