--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
     <nav> 
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Knights_Stats.html">Knights</a></li>
+        <!--<li><a href="Knights_Stats.html">Knights</a></li>
         <li><a href="Kodiaks_Stats.html">Kodiaks</a></li>
         <li><a href="Phantoms_Stats.html">Phantoms</a></li>
         <li><a href="Dragons_Stats.html">Dragons</a></li>
         <li><a href="Monarchs_Stats.html">Monarchs</a></li>
-        <li><a href="Cyclones_Stats.html">Cyclones</a></li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a></li>-->
+        <li><a href="Team Info.html">Team Information</a></li>
         <li><a href="All_Player_Stats.html">Player Stats</a></li>
       </ul>
     </nav>
