--- a/index.html
+++ b/index.html
@@ -43,24 +43,7 @@
       margin: auto;
     }
 
-    section {
-      background-color: #E0E0E0;
-      padding: 1em;
-      border-radius: 10px;
-    }
-
-    h1 {
-      color: #404040;
-      border-bottom: 2px solid #0066CC;
-      padding-bottom: 0.5em; 
-      text-align: center;
-    } 
-
-    h2 {
-      color: #606060;
-      padding-bottom: 0.5em; 
-      text-align: center;
-    }
+  
 
     ul {
       list-style-type: none;
@@ -98,17 +81,41 @@
       text-decoration-thickness: 2px;
     }
 
+    /* ...existing styles... */
+
     .side-by-side {
       display: flex;
       gap: 2em;
       justify-content: center;
+      flex-wrap: wrap;
     }
 
     .side-by-side section {
       flex: 1;
       min-width: 250px;
     }
-  </style>
+
+    /* Responsive styles for mobile */
+    @media (max-width: 700px) {
+      main {
+        padding: 1em;
+      }
+      .side-by-side {
+        flex-direction: column;
+        gap: 1em;
+      }
+      .side-by-side section {
+        min-width: 0;
+        width: 100%;
+      }
+      section {
+        padding: 0.5em;
+      }
+      h1, h2 {
+        font-size: 1.2em;
+      }
+  }
+</style>
 </head>
 <body>
   <header>
