--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@
       margin: auto;
     }
 
-  
+    section {
+      background-color: #E0E0E0;
+      padding: 1em;
+      border-radius: 10px;
+    }
+
+    h1 {
+      color: #404040;
+      border-bottom: 2px solid #0066CC;
+      padding-bottom: 0.5em; 
+      text-align: center;
+    } 
+
+    h2 {
+      color: #606060;
+      padding-bottom: 0.5em; 
+      text-align: center;
+    }
 
     ul {
       list-style-type: none;
@@ -81,7 +98,7 @@
       text-decoration-thickness: 2px;
     }
 
-    /* ...existing styles... */
+ /* ...existing styles... */
 
     .side-by-side {
       display: flex;
@@ -114,7 +131,7 @@
       h1, h2 {
         font-size: 1.2em;
       }
-  }
+    }
 </style>
 </head>
 <body>
@@ -122,7 +139,12 @@
     <nav> 
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Team Info.html">Team Information</a></li>
+        <li><a href="Knights_Stats.html">Knights</a></li>
+        <li><a href="Kodiaks_Stats.html">Kodiaks</a></li>
+        <li><a href="Phantoms_Stats.html">Phantoms</a></li>
+        <li><a href="Dragons_Stats.html">Dragons</a></li>
+        <li><a href="Monarchs_Stats.html">Monarchs</a></li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a></li>
         <li><a href="All_Player_Stats.html">Player Stats</a></li>
       </ul>
     </nav>
@@ -159,7 +181,7 @@
 
   <div class="side-by-side">
     <section>
-      <h2>Last Week's Stars</h2>
+      <h2>Last Weeks Stars</h2>
       <ul>
         <li>Best Striker - BurlierPython43 (Knights): 7 Goals</li>
         <li>Best Gaurdian - Madbrash2 (Cyclones): 10 Saves</li>
